test/corpus/missing_colon.txt
=======================
Missing colon in declaration
=======================

Button {
  align left;
}

---

(source_file
  (rule_set
    (selector
      (type_selector))
    (ERROR
      (property_name))))
