test/corpus/ok/psuedo_selector.txt
================================================================================
Pseudo Selector
================================================================================

Test:hover {}

.class:hover {}

#id:hover {}

--------------------------------------------------------------------------------

(source_file
  (rule_set
    (selector
      (type_selector)
      (pseudo_class_selector)))
  (rule_set
    (selector
      (class_selector)
      (pseudo_class_selector)))
  (rule_set
    (selector
      (id_selector)
      (pseudo_class_selector))))
