test/corpus/ok/variables.txt
================================================================================
Variables
================================================================================

Test {

	* { }

	&:hover { }

	&.class { }
}

--------------------------------------------------------------------------------

(source_file
  (rule_set
    (selector
      (type_selector))
    (rule_set
      (selector
        (wildcard_selector)))
    (rule_set
      (selector
        (parent_reference)
        (pseudo_class_selector)))
    (rule_set
      (selector
        (parent_reference)
        (class_selector)))))
